--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,7 @@ langchain-core==0.3.29
 langchain-ollama==0.2.2
 langchain_community==0.3.14
 langchain_text_splitters==0.3.5
-unstructured>=0.16.12
-unstructured[all-docs]>=0.16.12
+pypdf
 onnx>=1.17.0
 protobuf==5.29.2
 chromadb>=0.4.22
